# opendrift_plugins

./: CHANGELOG.md  README.md  setup.cfg
.circleci/: config.yml
tests/: test_examples.py
