[metadata]
name = opendrift_plugins
version = attr: opendrift_plugins.__version__
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
license = MIT


[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
python_requires = >=3.7
include_package_data = True

#[options.package_data]
#* = *.yaml, *.geojson

[options.packages.find]
where=src
